      multiple root revisions. (Andrew Bennetts, #317654)

    * ``bzr shelve`` now properly handle patches with no terminating newline.
      (Benoît PIERRE, #303569)

    * ``bzr unshelve`` gives a more palatable error if passed a non-integer
      shelf id. (Daniel Watkins)

    * Export now handles files that are not present in the tree.
      (James Westby, #174539)

    * Fixed "sprout() got an unexpected keyword argument 'source_branch'"
      error branching from old repositories.
      (Martin Pool, #321695)

    * Make ``bzr push --quiet <non-local location>`` less chatty.
      (Kent Gibson, #221461)

    * Many Branch hooks would not fire with ``bzr://`` and ``bzr+ssh://``
      branches, and this was not noticed due to a bug in the test logic
      for branches. This is now fixed and a test added to prevent it
      reoccuring. (Robert Collins, Andrew Bennetts)

    * Restore the progress bar on Windows. We were disabling it when TERM
      wasn't set, but Windows doesn't set TERM. (Alexander Belchenko)

    * ``setup.py build_ext`` now gives a proper error when an extension
      fails to build. (John Arbash Meinel)

    * Under rare circumstances (aka nobody reported a bug about it), the ftp
      transport could revert to ascii mode. It now stays in binary mode except
      when needed.
      (Vincent Ladeuil)

    * Unshelve does not generate warnings about progress bars.
      (Aaron Bentley, #328148)

  DOCUMENTATION:

    * Added ``Organizing your workspace`` to the User Guide appendices,
      summarizing some common ways of organizing trees, branches and
      repositories and the processes/workflows implied/enabled by each.
      (Ian Clatworthy)

    * Hooks can now be self documenting. ``bzrlib.hooks.Hooks.create_hook``
      is the entry point for this feature. (Robert Collins)

    * The documentation for ``shelve`` and ``unshelve`` has been clarified.
      (Daniel Watkins, #327421, #327425)

  API CHANGES:
